[package]
name = "gid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.10.0"
serde = "^1.0"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.56"
async-recursion = "1.0.0"
clap = {version = "3.1.8", features = ["derive"]}
