[package]
name = "gid_cli"
version = "0.2.1"
edition = "2021"
description = "Help project managers and project owners with easy-to-understand views of github issue dependencies."
keywords = ["cli", "gid", "github", "project-management", "mermaid"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/k-nasa/gid"
license="MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.13.0"
serde = "^1.0"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.71"
async-recursion = "1.0.4"
clap = {version = "3.2.2", features = ["derive"]}

[[bin]]
name = "gid"
path = "src/main.rs"
